--- a/homepage.html
+++ b/homepage.html
@@ -20,21 +20,35 @@
 	<link rel="stylesheet" type="text/css" href="styles/custom/v1/css/main-media.css">
 </head>
 <body>
-	<header class="container-fluid">
-		<div class="row header-wrapper">
-			<a class="navbar-brand" id="logo" href="#">
-				<img src="styles/custom/v1/images/logo.png">
-			</a>
-			<ul class="nav nav-bar">
-				<li><a href="#">Equipment Leasing News</a></li>
-				<li><a href="#">Taycor Careers</a></li>
-				<li><a href="#">About Taycor</a></li>
-				<li><a href="#">Vendor Partnership</a></li>
-				<li class="phonenumber"><i></i>&nbsp;&nbsp;800-322-9738</li>
-			</ul>
+	<header class="container">
+		<div class="row">
+			<div class="header-inner w-100">
+				<nav class="navbar navbar-toggleable-sm navbar-light bg-faded">
+					<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
+					<a class="navbar-brand" id="logo" href="#"><img src="styles/custom/v1/images/logo.png"></a>
+
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav ml-auto">
+							<li class="nav-item active">
+								<a class="nav-link" href="#">About</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Product</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Contact</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
 		</div>
 	</header>
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<h1>TESTER</h1>
 		<ol class="carousel-indicators">
 			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
